plc/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: plc
    app.kubernetes.io/name: plc
  name: plc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: plc
      app.kubernetes.io/name: plc
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: plc
        app.kubernetes.io/name: plc
    spec:
      containers:
        - image: ghcr.io/xjdao2025/did-method-plc:latest
          imagePullPolicy: IfNotPresent
          name: plc
          ports:
            - containerPort: ${PLC_PORT}
              name: http
              protocol: TCP
          resources: 
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 200m
              memory: 512Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /etc/localtime
              name: node-localtime
        - image: m.daocloud.io/docker.io/postgres:16-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources: 
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 200m
              memory: 512Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
            - mountPath: /etc/localtime
              name: node-localtime
      volumes:
      - hostPath:
          path: /etc/localtime
        name: node-localtime
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: alicloud-disk-essd
        resources:
          requests:
            storage: 20Gi
